cambios index styles y fotos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item"> <a href="#home" class="nav__link active-link">Inicio</a> </li>
-                    <li class="nav__item"><a href="#nosotros" class="nav__link">Nosotros</a></li>
+                    <li class="nav__item"><a href="#about" class="nav__link">Nosotros</a></li>
                     <li class="nav__item"><a href="#proyectos" class="nav__link">Proyectos</a></li>
                     <li class="nav__item"><a href="#galeria" class="nav__link">Galeria</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contacto</a></li>
@@ -67,6 +67,223 @@
                     <div class="home__img">
                         <img src="assets/img/LOGO-NUEVA-GENARACION.png" alt="">
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- nosotros -->
+        <section class="about section bd-container" id="about">
+            <span class="section-subtitle">Nosotros</span>
+            <h2 class="section-title">¿Quienes somos?</h2>
+
+            <div class="about__container db-grid">
+                <div class="about__data bd-grid">
+                    <p class="about__description"><span>Lorem ipsum <br> </span> Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Autem quo beatae nisi nostrum et consequuntur aliquid. Labore vitae quasi
+                        rerum temporibus accusamus repellat doloremque facilis! Delectus.
+                    </p>
+
+                    <div>
+                        <span class="about__number">05</span>
+                        <span class="about__achievement">Lorem ipsum dolor sit amet, consectet</span>
+                    </div>
+                    <div>
+                        <span class="about__number">+29</span>
+                        <span class="about__achievement">Lorem ipsum dolor sit amet, consectet</span>
+                    </div>
+                    <div>
+                        <span class="about__number">07
+                        </span>
+                        <span class="about__achievement">Lorem ipsum dolor sit amet, consectet</span>
+                    </div>
+
+                </div>
+
+                <img src="assets/img/Nosotros.jpeg" alt="" class="about__img">
+            </div>
+        </section>
+
+
+        <!-- Proyectos -->
+        <!-- <section class="qualification section bd-container">
+            <span class="section-subtitle">Lorem ipsum dolor sit amet</span>
+            <h2 class="section-title">Proyectos</h2>
+
+            <div class="qualification__container bd-grid">
+                <div class="qualification__content">
+                    <h2 class="qualification__title">
+                        <i class='bx bx-briefcase-alt qualification__title-icon'></i>
+                        Lorem ipsum
+                    </h2>
+
+                    <div class="bd-grid">
+                        <div class="qualification__data">
+                            <h3 class="qualification__area">Lorem ipsum dolor sit amet</h3>
+
+                            <div class="qualification__box">
+                                <span class="qualification__work">
+                                    <i class='bx bx-briefcase-alt qualification__title-icon'></i>
+                                    Lorem - Lorem ipsum
+                                </span>
+                                <span class="qualification__work">
+                                    <i class='bx bx-calendar-alt qualification__title-icon'></i>
+                                    Ene 2021 - Ago 2021
+                                </span>
+                            </div>
+                        </div>
+                        <div class="qualification__data">
+                            <h3 class="qualification__area">Lorem ipsum dolor sit amet</h3>
+
+                            <div class="qualification__box">
+                                <span class="qualification__work">
+                                    <i class='bx bx-briefcase-alt qualification__title-icon'></i>
+                                    Lorem - Lorem ipsum
+                                </span>
+                                <span class="qualification__work">
+                                    <i class='bx bx-calendar-alt qualification__title-icon'></i>
+                                    Ene 2021 - Ago 2021
+                                </span>
+                            </div>
+                        </div>
+                        <div class="qualification__data">
+                            <h3 class="qualification__area">Lorem ipsum dolor sit amet</h3>
+
+                            <div class="qualification__box">
+                                <span class="qualification__work">
+                                    <i class='bx bx-briefcase qualification__title-icon'></i>
+                                    Lorem - Lorem ipsum
+                                </span>
+                                <span class="qualification__work">
+                                    <i class='bx bx-calendar-alt qualification__title-icon'></i>
+                                    Ene 2021 - Ago 2021
+                                </span>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="qualification__content">
+                    <h2 class="qualification__title">
+                        <i class='bx bx-book-bookmark qualification__title-icon'></i>
+
+                        Lorem ipsum
+                    </h2>
+
+                    <div class="bd-grid">
+                        <div class="qualification__data">
+                            <h3 class="qualification__area">Lorem ipsum dolor sit amet</h3>
+
+                            <div class="qualification__box">
+                                <span class="qualification__work">
+                                    <i class='bx bx-book-alt qualification__title-icon'></i>
+                                    Lorem - Lorem ipsum
+                                </span>
+                                <span class="qualification__work">
+                                    <i class='bx bx-calendar-alt qualification__title-icon'></i>
+                                    Ene 2021 - Ago 2021
+                                </span>
+                            </div>
+                        </div>
+                        <div class="qualification__data">
+                            <h3 class="qualification__area">Lorem ipsum dolor sit amet</h3>
+
+                            <div class="qualification__box">
+                                <span class="qualification__work">
+                                    <i class='bx bx-book-alt qualification__title-icon'></i>
+                                    Lorem - Lorem ipsum
+                                </span>
+                                <span class="qualification__work">
+                                    <i class='bx bx-calendar-alt qualification__title-icon'></i>
+                                    Ene 2021 - Ago 2021
+                                </span>
+                            </div>
+                        </div>
+                        <div class="qualification__data">
+                            <h3 class="qualification__area">Lorem ipsum dolor sit amet</h3>
+
+                            <div class="qualification__box">
+                                <span class="qualification__work">
+                                    <i class='bx bx-book qualification__title-icon'></i>
+                                    Lorem - Lorem ipsum
+                                </span>
+                                <span class="qualification__work">
+                                    <i class='bx bx-calendar-alt qualification__title-icon'></i>
+                                    Ene 2021 - Ago 2021
+                                </span>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> -->
+
+
+
+        <!-- services -->
+
+        <section class="services section bd-container" id="proyectos">
+            <span class="section-subtitle">Lorem ipsum dolor </span>
+            <h2 class="section-title">Proyectos</h2>
+
+
+            <div class="services__container bd-grid">
+                <div class="services__data">
+                    <i class='bx bx-palette services__icon'></i>
+
+                    <h3 class="services__tittle">Lorem ipsum</h3>
+                    <p class="services__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perferendis ex maiores repellat eius atque, adipisci, quo ipsum explicabo iste debitis possimus
+                        voluptatibus quaerat repellendus reiciendis molestiae magni consequatur nobis. Assumenda.</p>
+                    <a href="#" class="button">Conozca más</a>
+                </div>
+                <div class="services__data">
+                    <i class='bx bx-laptop services__icon'></i>
+
+                    <h3 class="services__tittle">Lorem ipsum</h3>
+                    <p class="services__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perferendis ex maiores repellat eius atque, adipisci, quo ipsum explicabo iste debitis possimus
+                        voluptatibus quaerat repellendus reiciendis molestiae magni consequatur nobis. Assumenda.</p>
+                    <a href="#" class="button">Conozca más</a>
+                </div>
+                <div class="services__data">
+                    <i class='bx bx-pen services__icon'></i>
+
+                    <h3 class="services__tittle">Lorem ipsum</h3>
+                    <p class="services__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perferendis ex maiores repellat eius atque, adipisci, quo ipsum explicabo iste debitis possimus
+                        voluptatibus quaerat repellendus reiciendis molestiae magni consequatur nobis. Assumenda.</p>
+                    <a href="#" class="button">Conozca más</a>
+                </div>
+            </div>
+
+            <!-- en los botones de conocer más entra como trompada un modal -->
+
+        </section>
+
+
+        <!-- proyectos futuros -->
+        <section class="project section bd-container">
+            <div class="project__container bd-grid">
+                <div class="project__data">
+                    <i class='bx bx-chat project__icon'></i>
+
+                    <div>
+                        <h2 class="project__title">Proyectos Futuros</h2>
+                        <p class="project__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam,
+                            quidem ut rem distinctio ratione perspiciatis soluta ab iusto blanditiis ullam fuga mollitia
+                            at laboriosam recusandae aperiam ad quod eveniet facilis.</p>
+                    </div>
+
+                    <div>
+                        <a href="#" class="button button-white">Lorem Ipsum</a>
+                    </div>
+
+
+
                 </div>
             </div>
         </section>
