--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
 
         <!-- proyectos futuros -->
-        <section class="project section bd-container">
+        <!-- <section class="project section bd-container">
             <div class="project__container bd-grid">
                 <div class="project__data">
                     <i class='bx bx-chat project__icon'></i>
@@ -286,12 +286,112 @@
 
                 </div>
             </div>
+        </section> -->
+
+
+        <!-- galeria -->
+        <section class="portfolio section bd-container" id="galeria">
+            <span class="section-subtitle">Lorem ipsum</span>
+            <h2 class="section-title">Galeria</h2>
+
+            <div class="portfolio__nav">
+                <span class="portfolio__item" data-filter="all">Todos</span>
+                <span class="portfolio__item" data-filter=".uno">1</span>
+                <span class="portfolio__item" data-filter=".dos">2</span>
+                <span class="portfolio__item" data-filter=".tres">3</span>
+            </div>
+
+            <div class="portfolio__container bd-grid">
+                <div class="porfolio__content mix uno">
+                    <a href="#"> <img src="assets/img/galeria1.jpeg" alt="" class="portfolio__img"> </a>
+
+                    <div class="portfolio__data">
+                        <span class="portfolio__subtitle">Lorem ipsum </span>
+                        <a href="#">
+                            <h2 class="portfolio__title"> Lorem ipsum dolor sit amet</h2>
+                        </a>
+                        <a href="#" class="button button-link"> Ver Más</a>
+                    </div>
+                </div>
+
+                <div class="porfolio__content mix uno">
+                    <a href="#"> <img src="assets/img/galeria2.jpeg" alt="" class="portfolio__img"> </a>
+
+                    <div class="portfolio__data">
+                        <span class="portfolio__subtitle">Lorem ipsum </span>
+                        <a href="#">
+                            <h2 class="portfolio__title"> Lorem ipsum dolor sit amet</h2>
+                        </a>
+                        <a href="#" class="button button-link"> Ver Más</a>
+                    </div>
+                </div>
+
+
+                <div class="porfolio__content mix dos">
+                    <a href="#"> <img src="assets/img/galeria3.jpeg" alt="" class="portfolio__img"> </a>
+
+                    <div class="portfolio__data">
+                        <span class="portfolio__subtitle">Lorem ipsum </span>
+                        <a href="#">
+                            <h2 class="portfolio__title"> Lorem ipsum dolor sit amet</h2>
+                        </a>
+                        <a href="#" class="button button-link"> Ver Más</a>
+                    </div>
+                </div>
+
+
+                <div class="porfolio__content mix dos">
+                    <a href="#"> <img src="assets/img/galeria4.jpeg" alt="" class="portfolio__img"> </a>
+
+                    <div class="portfolio__data">
+                        <span class="portfolio__subtitle">Lorem ipsum </span>
+                        <a href="#">
+                            <h2 class="portfolio__title"> Lorem ipsum dolor sit amet</h2>
+                        </a>
+                        <a href="#" class="button button-link"> Ver Más</a>
+                    </div>
+                </div>
+
+
+                <div class="porfolio__content mix tres">
+                    <a href="#"> <img src="assets/img/galeria5.jpeg" alt="" class="portfolio__img"> </a>
+
+                    <div class="portfolio__data">
+                        <span class="portfolio__subtitle">Lorem ipsum </span>
+                        <a href="#">
+                            <h2 class="portfolio__title"> Lorem ipsum dolor sit amet</h2>
+                        </a>
+                        <a href="#" class="button button-link"> Ver Más</a>
+                    </div>
+                </div>
+
+
+                <div class="porfolio__content mix tres">
+                    <a href="#"> <img src="assets/img/galeria6.jpeg" alt="" class="portfolio__img"> </a>
+
+                    <div class="portfolio__data">
+                        <span class="portfolio__subtitle">Lorem ipsum </span>
+                        <a href="#">
+                            <h2 class="portfolio__title"> Lorem ipsum dolor sit amet</h2>
+                        </a>
+                        <a href="#" class="button button-link"> Ver Más</a>
+                    </div>
+                </div>
+            </div>
         </section>
+
+
+        <!-- testimoniales -->
+        <section class="testimonial section bd-container">
+            <span class="section-subtitle">Lorem ipsum</span>
+            <h2 class="section-title">Testimoniales</h2>
+        </section>
+
     </main>
 
 
     <!-- mixitup filter -->
-    <script src=""></script>
+    <script src="assets/js/mixitup.min.js"></script>
 
     <!-- swiper js -->
     <script src=""></script>
