--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <!-- swiper css -->
-
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
     <!-- boxicons -->
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
@@ -385,8 +385,54 @@
         <section class="testimonial section bd-container">
             <span class="section-subtitle">Lorem ipsum</span>
             <h2 class="section-title">Testimoniales</h2>
+
+            <div class="testimonial__container swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="testimonial__content swiper-slide">
+                        <img src="assets/img/testimonial1.jpg" alt="" class="testimonial__img">
+                        <h3 class="testimonial__tittle">John Doe</h3>
+                        <span class="testimonial__client">Lorem</span>
+                        <p class="testimonial__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequatur hic ad quas, expedita quidem eum voluptate cum deserunt aliquid eaque id
+                            provident possimus maxime pariatur magnam suscipit adipisci, nulla itaque.</p>
+                    </div>
+                    <div class="testimonial__content swiper-slide">
+                        <img src="assets/img/testimonial2.jpg" alt="" class="testimonial__img">
+                        <h3 class="testimonial__tittle">John Doe</h3>
+                        <span class="testimonial__client">Lorem</span>
+                        <p class="testimonial__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequatur hic ad quas, expedita quidem eum voluptate cum deserunt aliquid eaque id
+                            provident possimus maxime pariatur magnam suscipit adipisci, nulla itaque.</p>
+                    </div>
+                    <div class="testimonial__content swiper-slide">
+                        <img src="assets/img/testimonial3.jpg" alt="" class="testimonial__img">
+                        <h3 class="testimonial__tittle">John Doe</h3>
+                        <span class="testimonial__client">Lorem</span>
+                        <p class="testimonial__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequatur hic ad quas, expedita quidem eum voluptate cum deserunt aliquid eaque id
+                            provident possimus maxime pariatur magnam suscipit adipisci, nulla itaque.</p>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
         </section>
 
+
+        <!-- contacto -->
+        <section class="contact section bd-container" id="contact">
+            <span class="section-subtitle">Lorem ipsum</span>
+            <h2 class="section-title">Contacto</h2>
+
+            <div class="contact__container bd-grid">
+                <div class="contact__content bd-grid">
+                    <div class="contact__box">
+                        <i class='bx bx-home'></i>
+                        <h3 class="contact__title">Localidad</h3>
+                        <span class="contact__description">#123 CDE- Paraguay</span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
@@ -394,7 +440,7 @@
     <script src="assets/js/mixitup.min.js"></script>
 
     <!-- swiper js -->
-    <script src=""></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
 
     <!-- gsap -->
     <script src=""></script>
