--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+    <!--favicon-->
+    <link rel="shortcut icon" href="assets/img/redFlag.ico" type="image/x-icon">
+
     <!-- css -->
     <link rel="stylesheet" href="assets/css/styles.css">
 
@@ -16,6 +20,7 @@
     <!-- boxicons -->
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 
+    
     
 
 
