cambios para merge David

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <ul class="nav__list">
                     <li class="nav__item"> <a href="#home" class="nav__link active-link">Inicio</a> </li>
                     <li class="nav__item"><a href="#about" class="nav__link">Nosotros</a></li>
-                    <li class="nav__item"><a href="#proyectos" class="nav__link">Proyectos</a></li>
+                    <li class="nav__item"><a href="#proyectos" class="nav__link">Objetivos</a></li>
                     <li class="nav__item"><a href="#galeria" class="nav__link">Galeria</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contacto</a></li>
                 </ul>
@@ -97,7 +97,7 @@
                     </p> -->
 
 
-                    <p class="about__description"><span>Misión <br> </span> El Movimiento Político Nueva Generación,
+                    <p class="about__description"><span class="span__mision">Misión <br> </span> El Movimiento Político Nueva Generación,
                         conformado por compatriotas, que deseamos un país en el cual nos brinden, las herramientas de
                         movilidad social ascendente, de tal manera en que el esfuerzo personal, o colectivo, se vea
                         redituado en mejores condiciones de vida para nuestra sociedad en general, bajo los principios
@@ -105,7 +105,7 @@
 
                          
                     </p>
-                    <p class="about__description"><span>Visión <br> </span> Nuestro norte, es el servicio a los demás,
+                    <p class="about__description"><span class="span__mision">Visión <br> </span> Nuestro norte, es el servicio a los demás,
                         la gran responsabilidad que tenemos con la ciudanía, y en especial con las nuevas generaciones.
                         Nuestra obligación es brindar a las futuras generaciones, un país con mejores condiciones de
                         vida a las que nos heredaron nuestros antecesores.
@@ -127,7 +127,7 @@
 
                 </div>
 
-                <img src="assets/img/Nosotros.jpeg" alt="" class="about__img">
+                <img src="assets/img/nosotros.jpeg" alt="" class="about__img">
             </div>
         </section>
 
@@ -262,7 +262,7 @@
                 <div class="services__data">
                     <i class="fas fa-flag services__icon"></i>
 
-                    <h3 class="services__tittle">Nueva Generación</h3>
+                    <h3 class="services__title">Nueva Generación</h3>
                     <p class="services__description">Movimiento ciudadano que nace ante la necesidad de involucrar a las
                         personas cambiando la forma de hacer política, de una manera ética y transparente. 
                     </p>
@@ -272,8 +272,8 @@
                     <i class="fas fa-thumbs-up services__icon"></i>
 
 
-                    <h3 class="services__tittle">Lo lograremos</h3>
-                    <p class="services__description">basados en una amplia participación de todos los actores, que
+                    <h3 class="services__title">Lo lograremos</h3>
+                    <p class="services__description">Basados en una amplia participación de todos los actores, que
                         componen nuestra sociedad, donde buscaremos ubicar a personas idóneas, para los diferentes
                         puestos que conforman la amplia y variada gama de actividades en la función pública.</p>
                     <!-- <a href="#" class="button">Conozca más</a> -->
@@ -283,7 +283,7 @@
                     <i class="fas fa-handshake services__icon"></i>
                     <!-- <i class='bx bx-pen '></i> -->
 
-                    <h3 class="services__tittle">Comprometidos</h3>
+                    <h3 class="services__title">Comprometidos</h3>
                     <p class="services__description">Tenemos la certeza absoluta, que nuestras agendas personales
                         quedarán subordinadas al interés superior de la nación. Nuestra patria, es y será, siempre
                         nuestra prioridad. <strong>#ElCambioComienzaAquí</strong></p>
